[package]
name = "YoutubeBackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
actix-cors = "0.6.4"
tera = "1.18.1"
rocket = "0.4.11"
handlebars = "4.3.6"
